--- a/Try1/app/src/main/res/layout/activity_display_message.xml
+++ b/Try1/app/src/main/res/layout/activity_display_message.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="114dp"
         android:layout_marginBottom="70dp"
         android:text="Login"
-        android:textColor="#006666"
+        android:textColor="#24287A"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
