--- a/Try1/app/src/main/res/layout/activity_dashboard.xml
+++ b/Try1/app/src/main/res/layout/activity_dashboard.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/button_wh"
+        android:onClick="sendClasses"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/button_allergies"
+        android:onClick="sendTuition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
@@ -49,6 +51,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="19dp"
         android:text="@string/button_blood"
+        android:onClick="sendResources"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +67,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="20dp"
         android:text="@string/button_sg"
+        android:onClick="sendProgram"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
